style.css
#songBody {
  display: inline-block;
  border: solid;
  border-collapse: collapse;
  box-shadow: 5px 5px 5px 5px black;
  width: 60%;
  height: 500px;
  overflow-y: scroll;
  background-color: white;
  margin: auto;
}

#table2 {
  display: inline-block;
  border: solid;
  border-collapse: collapse;
  box-shadow: 5px 5px 5px 5px black;
  width: 100%;
  height: 500px;
  overflow-y: scroll;
  background-color: white;
  margin: auto;
}

#tablePlaylist {
  margin: auto;
}

#menuSection {
  padding-top: 10px;
  margin-top: 10px;
  text-align: center;
  background-color: grey;
}

#titleName {
  width: 40%;
  height: 20px;
  border-radius: 10px;
  align-items: center;
}

#creditHover {
  border: solid;
  box-shadow: 5px 5px 5px white;
  width: 35%;
  background-color: lightgrey;
  color: black;
  margin: auto;
  text-align: center;
}

#artistSelect {
  font-size: large;
}

#genreSelect {
  font-size: large;
}

#songSection {
  background-color: grey;
}

#searchSection {
  /* background-color: grey; */
  width: 60%;
  margin: auto;
}

#playlistClose {
  padding: 10px;
  border-radius: 10px;
  width: 30%;
  font-size: 15px;
  font-family: cursive;
}

body {
  background-color: lightgrey;
}

header {
  text-align: center;
  font-family: cursive;
  margin-bottom: 10px;
  background-color: black;
  color: white;
  padding-bottom: 50px;
}

footer {
  text-align: center;
  font-family: cursive;
  margin-bottom: 10px;
  background-color: black;
  color: white;
}

select {
  width: 39.5%;
  height: 25px;
  text-align: center;
  bottom: 100%;
}

label {
  font-family: cursive;
  font-size: 20px;
}

td {
  padding: 3px;
}

th {
  padding: 5px;
}

tr:nth-child(odd) {
  background-color: lightgrey;
}

.headerButtons {
  padding: 5px;
  border-radius: 10px;
  width: 5%;
  font-size: 15px;
  font-family: cursive;
}

.spacing {
  margin-top: 30px;
}

.buttonStyle {
  padding: 10px;
  border-radius: 10px;
  width: 15%;
  font-size: 15px;
  font-family: cursive;
}

.fullButton {
  width: 100%;
}

/*taken from*/
/*https://www.geeksforgeeks.org/how-to-create-a-snackbar-using-hmtl-css-javascript/*/
#snackbar {
  visibility: hidden;
  min-width: 100px;
  background-color: black;
  color: white;
  border-radius: 2px;
  padding: 16px;
  position: fixed;
  left: 45%;
  bottom: 10px;
  z-index: 1;
}
/*need to change this*/
#snackbar.show {
  visibility: visible;
}

.hidden {
  display: none;
}

.visible {
  display: flex;
}

#singleSongViewContainer {
  font: comicsans;
  text-align: center;
  color: aliceblue;
  display: inline-block;
  border: solid;
  border-collapse: collapse;
  box-shadow: 5px 5px 5px 5px rgb(0, 0, 0);
  width: 20%;
  height: 500px;
  overflow-y: scroll;
  background-color: rgb(0, 0, 0);
  margin: auto;
}

#playlistMath {
  font-size: larger;
  text-align: center;
  padding: 10px;
  border: solid;
  border-collapse: collapse;
  box-shadow: 0px 0px 0px 1px rgb(0, 0, 0);
  color: rgb(0, 0, 0);
}

